🌟 Added Footer and Text

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,8 +14,12 @@
     <title>ThatsAShort.link</title>
   </head>
   <body style="text-align: center;">
+    <div style="margin-top: 1in">
+      <h1>ThatsAShort.link</h1>
+      <p style="font-size:medium">a Project by <a href="https://jnsaph.website/">APH</a></p>
+    </div>
 
-    <div class= "container card text-center" style="margin-top: 10%">
+    <div class= "container card text-center" style="margin-top: 5%">
         <div class="card-header">
             Type in your URL
           </div>
@@ -55,6 +59,10 @@
             </table>
         </div>
       </div>
+
+      <footer class="fixed-bottom" style="padding: 10px; background-color: white;">
+        Copyright © <a href="https://jnsaph.website/">JNSAPH</a>
+      </footer>
 
 
 
