--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,22 +23,32 @@
             Add / Remove a URL
           </div>
         <div class="card-body">
-            <form class="form-inline" action="/shorten" method="Post" style="display: inline-block;">
-                <div class="form-group mx-sm-3 mb-2">
-                  <label for="fullUrl" class="sr-only">URL</label>
-                  <input type="url" class="form-control" id="fullUrl" name="fullUrl" placeholder="Type in your URL">
-                  <input type="string" class="form-control" id="customShort" name="customShort" placeholder="Custom URL Code">
+          <form class="form-inline" action="/shorten" method="Post" style="display: inline-block;">
+            <div class="row">
+              <div class="form-group mx-sm-3 mb-2 bmd-form-group">
+                <input type="url" class="form-control" id="fullUrl" name="fullUrl" placeholder="Type in your URL">
+              </div>
+
+                <div class="form-group mx-sm-3 mb-2 bmd-form-group">
+                  <input type="string" class="form-control" id="customShort" name="customShort" placeholder="Custom URL Code"><button type="submit" class="btn btn-primary mb-2">Shrink URL</button>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Shrink URL</button>
-              </form>
+              </div>
+            </form>
+
               <hr>
+
               <form class="form-inline" action="/delete" method="Post" style="display: inline-block;">
+                <div class="row"></div>
                 <div class="form-group mx-sm-3 mb-2">
                   <input type="text" class="form-control" id="delete" name="delete" placeholder="Type in your URL Code">
+                  <button type="submit" class="btn btn-primary mb-2">Delete URL Code</button>
                 </div>
-                <button type="submit" class="btn btn-primary mb-2">Delete URL Code</button>
+
               </form>
-        </div>
+
+
+
+          </div>
       </div>
 
       <div class="container card text-center" style="margin-top: 50px">
