--- a/views/index.ejs
+++ b/views/index.ejs
@@ -79,7 +79,8 @@
       </div>
 
       <footer style="margin: 30px">
-        Copyright <a href="https://jnsaph.website/">JNSAPH</a> | Version <%= package.version %>
+        Copyright <a href="https://jnsaph.website/">JNSAPH</a> | Version <%= package.version %> <br>
+        <a href="https://www.github.com/JNSAPH">GitHub</a>
       </footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
