--- a/TASL Frontend/src/app/urllist/urllist.component.html
+++ b/TASL Frontend/src/app/urllist/urllist.component.html
@@ -1,1 +1,24 @@
-<p>{{response | json}}</p>
+<nb-card>
+    <nb-card-body>
+
+        <p class="title">All Shortend URLs</p>
+
+        <table style="width: 100%">
+            <thead>
+                <tr>
+                    <th>Full URL</th>
+                    <th>URL Code</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody *ngFor="let resp of response">
+                <tr>
+                    <td #full style="max-width: 200px; overflow: hidden;">{{resp.full}}</td>
+                    <td #short style="max-width: 200px; overflow: hidden">{{resp.short}}</td>
+                    <td><button nbButton status="danger" shape="round" (click)="deleteShort(resp.short)"></button></td>
+                </tr>
+            </tbody>
+        </table>
+
+    </nb-card-body>
+</nb-card>
