--- a/TASL Frontend/src/app/urllist/urllist.component.html
+++ b/TASL Frontend/src/app/urllist/urllist.component.html
@@ -2,7 +2,6 @@
     <nb-layout-column class="colored-column-warning">
         <nb-card>
             <nb-card-body>
-
                 <p class="title">All Shortend URLs</p>
 
                 <table style="width: 100%">
@@ -30,5 +29,17 @@
 
 
     </nb-layout-column>
-    <nb-layout-column class="colored-column-info">Third</nb-layout-column>
+    <nb-layout-column class="colored-column-info">
+        <nb-card>
+            <nb-card-body>
+                <!--
+                    - Link Preview
+                    - Settings
+                    - Stats
+                -->
+            </nb-card-body>
+        </nb-card>
+
+
+    </nb-layout-column>
 </nb-layout>
