--- a/TASL Frontend/src/app/app.component.html
+++ b/TASL Frontend/src/app/app.component.html
@@ -3,9 +3,9 @@
     <p class="title">TASL App</p>
   </nb-layout-header>
   <nb-layout-column>
-    <app-info-card></app-info-card>
+    <app-info-card #infocard></app-info-card>
     
-    <app-newshort (newAdded)="list.ngOnInit()"></app-newshort>
-    <app-urllist #list></app-urllist>
+    <app-newshort #addui (newAdded)="list.ngOnInit(); infocard.ngOnInit()"></app-newshort>
+    <app-urllist #list (removedEntry)="infocard.ngOnInit();"></app-urllist>
   </nb-layout-column>
 </nb-layout>
