--- a/TASL Frontend/src/app/urllist/urllist.component.html
+++ b/TASL Frontend/src/app/urllist/urllist.component.html
@@ -1,5 +1,5 @@
 <nb-layout>
-    <nb-layout-column class="colored-column-warning">
+    <nb-layout-column>
         <nb-card>
             <nb-card-body>
                 <p class="title">All Shortend URLs</p>
@@ -29,7 +29,7 @@
 
 
     </nb-layout-column>
-    <nb-layout-column class="colored-column-info">
+    <nb-layout-column>
         <nb-card>
             <nb-card-body>
                 <!--
