--- a/TASL Frontend/src/app/app.component.scss
+++ b/TASL Frontend/src/app/app.component.scss
@@ -8,3 +8,10 @@ nb-layout-header{
     font-weight: bold;
     font-size: 18px
 }
+
+.login{
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    margin-left: 100px;
+}
