--- a/TASL Frontend/src/app/login/login.component.html
+++ b/TASL Frontend/src/app/login/login.component.html
@@ -11,7 +11,7 @@
                 <br><br>
                 <button nbButton status="primary" (click)="login(uname.value, pword.value)">Login</button>
                 <br><br>
-                <b>{{error | json}}</b>
+                <b>{{error}}</b>
                 <p>If this is the first that you login please change the Password & Username in the Config File!</p>
  
         </nb-card-body>
