--- a/TASL Frontend/src/app/app.component.html
+++ b/TASL Frontend/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nb-layout>
   <nb-layout-header>
     <p class="title">TASL App</p>
-    <p class="login" routerLink="login"><a>Login</a></p>
+    <p class="login" routerLink="admin/login"><a>Login</a></p>
     <p class="login" routerLink=""><a>Dashboard</a></p>
   </nb-layout-header>
   <nb-layout-column>
