--- a/TASL Frontend/src/app/app.component.html
+++ b/TASL Frontend/src/app/app.component.html
@@ -1,8 +1,12 @@
 <nb-layout>
   <nb-layout-header>
     <p class="title">TASL App</p>
-    <p class="login" routerLink="admin/login"><a>Login</a></p>
-    <p class="login" routerLink=""><a>Dashboard</a></p>
+
+    <div class="right">
+      <button shape="round" nbButton *ngIf="checkStatus()" (click)="logout()">
+        Logout
+      </button>
+    </div>
   </nb-layout-header>
   <nb-layout-column>
     <router-outlet></router-outlet>
