--- a/TASL Frontend/src/app/app.component.scss
+++ b/TASL Frontend/src/app/app.component.scss
@@ -15,3 +15,9 @@ nb-layout-header{
     font-size: 18px;
     margin-left: 100px;
 }
+
+.right {
+    position: absolute;
+    right: 0px;
+    padding-right: 20px;
+}
