--- a/TASL Frontend/src/app/login/login.component.html
+++ b/TASL Frontend/src/app/login/login.component.html
@@ -5,9 +5,9 @@
         </nb-card-header>
         <nb-card-body>
 
-                <input #uname type="text" nbInput shape="round" fieldSize="large" placeholder="Username" value="123" required> <!-- DELETE VALUE AFTER DEVELOPMENT -->
+                <input #uname type="text" nbInput shape="round" fieldSize="large" placeholder="Username" required> 
                 <br><br>
-                <input #pword type="password" nbInput shape="round" fieldSize="large" placeholder="Password" value="123" required> <!-- DELETE VALUE AFTER DEVELOPMENT -->
+                <input #pword type="password" nbInput shape="round" fieldSize="large" placeholder="Password" required>
                 <br><br>
                 <button nbButton status="primary" (click)="login(uname.value, pword.value)">Login</button>
                 <br><br>
