--- a/TASL Frontend/src/app/urllist/urllist.component.scss
+++ b/TASL Frontend/src/app/urllist/urllist.component.scss
@@ -15,3 +15,19 @@ th, td {
     font-size: 22px;
     font-weight: bold;
 }
+
+.row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
+.col {
+    -ms-flex-preferred-size: 0;
+    flex-basis: 0;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    max-width: 100%
+}
