Fixed Code smells

--- a/Frontend/src/app/urllist/urllist.component.html
+++ b/Frontend/src/app/urllist/urllist.component.html
@@ -4,7 +4,7 @@
             <nb-card-body>
                 <p class="title">All Shortend URLs</p>
 
-                <table style="width: 100%">
+                <table style="width: 100%" summary="List of all URLs">
                     <thead>
                         <tr>
                             <th>Full URL</th>
