Added Routes & Backend Improvments

--- a/Frontend/src/app/info-card/info-card.component.html
+++ b/Frontend/src/app/info-card/info-card.component.html
@@ -16,6 +16,11 @@
         </nb-card>
     </div>
     <div class="col">
-
+        <nb-card>
+            <nb-card-body>
+                <a routerLink="/admin/users"><p class="title">Total Accounts</p></a>
+                <p class="description">{{response.totalAccounts}}</p>
+            </nb-card-body>
+        </nb-card>
     </div>
 </div>
