--- a/Frontend/src/app/info-card/info-card.component.scss
+++ b/Frontend/src/app/info-card/info-card.component.scss
@@ -11,6 +11,13 @@
     padding-left: 20px;
 }
 
+.smalldesc{
+    color: black;
+    font-size: 16px;
+    font-weight: lighter;
+    padding-left: 20px;
+}
+
 nb-card{
     margin-left: 2vw;
     margin-right: 2vw;
