Register Component working

--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nb-layout>
   <nb-layout-header>
-    <p class="title">TASL App</p>
+    <a routerLink="/"><p class="title">TASL App</p></a>
 
     <div class="right">
       <button shape="round" nbButton *ngIf="checkStatus()" (click)="logout()">
