--- a/Frontend/src/app/info-card/info-card.component.html
+++ b/Frontend/src/app/info-card/info-card.component.html
@@ -19,7 +19,7 @@
         <nb-card>
             <nb-card-body>
                 <a routerLink="/admin/users"><p class="title">Total Accounts</p></a>
-                <p class="description">{{response.totalAccounts}}</p>
+                <p class="description">{{response.totalAccounts + 1}}</p>
             </nb-card-body>
         </nb-card>
     </div>
